tests/policy-2/namespace-fail.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-z
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    projectId: pid12345
  name: team-y
