tests/policy-2/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: validate-namespace-projectid
    rules:
      - name: validate-ns-label-projectid
        values:
          projectMap.data.pid12345: team-x
          projectMap.data.pid67890: team-y
    resources:
      - name: team-x
        values:
          request.object.metadata.labels.projectId: pid12345
          request.object.metadata.name: team-x
      - name: team-y
        values:
          request.object.metadata.labels.projectId: pid12345
          request.object.metadata.name: team-y
      - name: team-z
        values:
          request.object.metadata.name: team-z
          request.object.metadata.labels: {}
